Added default layout for e-mails.
ADD: Layout for e-mails
Added a layout in HTML and text version for the e-mails generated
by the app.

MODIFY: Setted configuration variables for assets host.
Because there is a possibility of using a external CDN for the
assets, there is a new configuration variable in config/watchr.yml
file for setting the assets host used in both web and e-mail urls
for assets.

--- a/config/watchr.default.yml
+++ b/config/watchr.default.yml
@@ -14,6 +14,8 @@ development:
     time_zone: "Madrid"
     # Default language for users
     default_language: "en"
+    # Assets host WITH PROTOCOL (the same domain used above if you don't use CDNs)
+    assets_host: "http://localhost:3000"
   email:
     # Default sender for e-mails
     default_sender: "no-reply@your-company.tld"
@@ -48,6 +50,7 @@ production:
     use_ssl: false
     time_zone: "Madrid"
     default_language: "en"
+    assets_host: "http://your-company.tld"
   email:
     default_sender: "no-reply@your-company.tld"
     smtp:
@@ -71,6 +74,7 @@ test:
     use_ssl: false 
     time_zone: "Madrid" 
     default_language: "en"
+    assets_host: "http://your-company.tld"
   email:
     default_sender: "no-reply@your-company.tld"
     smtp:
