--- a/config/watchr.default.yml
+++ b/config/watchr.default.yml
@@ -16,6 +16,15 @@ development:
     default_language: "en"
     # Assets host WITH PROTOCOL (the same domain used above if you don't use CDNs)
     assets_host: "http://localhost:3000"
+  redis:
+    # Your redis host
+    host: "localhost"
+    # Redis listening port (default: 6379)
+    port: 6379
+    # Number od the DB
+    db: 12
+    # Namespace to use
+    namespace: "watchr_development"
   email:
     # Default sender for e-mails
     default_sender: "no-reply@your-company.tld"
@@ -51,6 +60,11 @@ production:
     time_zone: "Madrid"
     default_language: "en"
     assets_host: "http://your-company.tld"
+  redis:
+    host: "localhost"
+    port: 6379
+    db: 12
+    namespace: "watchr_production"
   email:
     default_sender: "no-reply@your-company.tld"
     smtp:
@@ -75,6 +89,11 @@ test:
     time_zone: "Madrid" 
     default_language: "en"
     assets_host: "http://your-company.tld"
+  redis:
+    host: "localhost"
+    port: 6379
+    db: 12
+    namespace: "watchr_test"
   email:
     default_sender: "no-reply@your-company.tld"
     smtp:
