Added deploy recipe for Capistrano
ADD: Capistrano recipe to deploy
Added a custom deploy recipe and per-stage configuration.
These configurations are in blank and the real configurations
are ignored by git.

ADD: Watchr-specific namespace for capistrano tasks
Used at the moment to upload the configuration file from local
to remote hosts.

MODIFY: Unicorn configuration file
Change the PID location to allow the daemon to start.

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ pickle-email-*.html
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/watchr.yml
+config/deploy/production.rb
+config/deploy/staging.rb
 
 ## Environment normalisation:
 /.bundle
